--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,14 +59,14 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.12f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\GameController.cs" />
-    <Compile Include="Assets\Scripts\ExitGame.cs" />
-    <Compile Include="Assets\Scripts\RestartGame.cs" />
-    <Compile Include="Assets\Scripts\Movement.cs" />
-    <Compile Include="Assets\Scripts\Timer.cs" />
-    <Compile Include="Assets\Scripts\Restart.cs" />
-    <Compile Include="Assets\Scripts\SetPlatforms.cs" />
-    <Compile Include="Assets\Scripts\DestroyPlatform.cs" />
+    <Compile Include="Assets\Scripts\MiniGame_1\RestartGame.cs" />
+    <Compile Include="Assets\Scripts\MiniGame_1\ExitGame.cs" />
+    <Compile Include="Assets\Scripts\MiniGame_1\DestroyPlatform.cs" />
+    <Compile Include="Assets\Scripts\MiniGame_1\Restart.cs" />
+    <Compile Include="Assets\Scripts\MiniGame_1\GameController.cs" />
+    <Compile Include="Assets\Scripts\MiniGame_1\SetPlatforms.cs" />
+    <Compile Include="Assets\Scripts\MiniGame_1\Timer.cs" />
+    <Compile Include="Assets\Scripts\MiniGame_1\Movement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
